Update mechanism used to retrieve game logs.